fixed table spacing in main and bonus exercise

--- a/BONUS/assets/css/style.css
+++ b/BONUS/assets/css/style.css
@@ -61,6 +61,7 @@ ul {
 
 table {
     padding: 10px 0;
+    border-collapse: collapse;
 }
 
 .first-column, .second-column {
