--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ ul {
 
 table {
     padding: 10px 0;
+    border-collapse: collapse;
 }
 
 .first-column, .second-column {
